improvements in /plugins